Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_cuongnh20web.yml
+++ b/.github/workflows/main_cuongnh20web.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_8AF45A4463D44DFBBA4EFEA6268FABC3 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_99C148489EB1485494984EC4B7716DBA }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D4D7BFB138CA492EBB7B685D6DA7A482 }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'cuongnh20web'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CC382333D0E8424682E00F829670E700 }}
+          
